--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.10.0",
     "prop-types": "^15.6.0",
     "re-base": "^3.2.0",
     "react": "^16.0.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css": "node-sass src/scss/*.scss src/css/*.css",
+    "watch": "yarn css -w"
   },
   "devDependencies": {
     "firebase": "^4.6.0"
