--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "css": "node-sass src/scss/*.scss src/css/*.css",
-    "watch": "yarn css -- -w"
+    "watch": "yarn css -- -w",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "firebase": "^4.6.0"
-  }
+    "firebase": "^4.6.0",
+    "gh-pages": "^2.0.1"
+  },
+  "homepage": "http://tritterskamp.github.io/restaurant-picker"
 }
